# OrnnForge

./: .gitignore  README.md  README_zh.md  accunts.md  api.py  batch1.py  lines  main.py  note.md  pyproject.toml  run.py  run_batch1.sh
front-end/: components.d.ts  package.json  tsconfig.json  vite.config.ts
front-end/src/: App.vue  main.ts  style.css
front-end/src/api/: index.ts
front-end/src/components/: GenerateFormDrawer.vue
front-end/src/router/: index.ts
front-end/src/stores/: forgeStore.ts
front-end/src/types/: api.ts  common.ts
front-end/src/utils/: index.ts
front-end/src/views/: CreationInfo.vue  CreationList.vue
macos/: ornn.forge.batch1.plist
src/: config.py  types.py
src/templates/: hupu.py
