[project]
name = "ornnforge"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.2",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.5",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.3",
    "loguru>=0.7.3",
    "motor>=3.7.1",
    "uvicorn>=0.38.0",
]


[[tool.uv.index]]
name = "pypi-tuna-tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
